word wrapping fix

--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -14,7 +14,6 @@
   
   .task-title-wrapper{
     flex: 2;
-    display: inline-block;
     margin-top: auto;
     margin-bottom: auto;
     padding-top: 30px;
